--- a/index.html
+++ b/index.html
@@ -86,23 +86,19 @@
 
     <div class="max-w-7xl mx-auto bg-[#fdfaf2] p-6 shadow-2xl border-2 border-[#d3c9b5]">
 
-        <!-- Header -->
         <header class="text-center py-6">
             <h1 class="text-5xl md:text-7xl font-bold newspaper-title py-4">The Hyderabad Monsoon Times</h1>
             <p class="text-gray-600 text-lg mt-2">Your Trusted Source for City Traffic & Weather Analysis</p>
             <div class="flex justify-between text-gray-500 mt-2 border-t border-b border-gray-400 py-1 text-sm">
-                <span>VOL. I, No. 1</span>
+                <span>Team Swadesh</span>
                 <span>HYDERABAD, INDIA</span>
                 <span id="currentDate"></span>
             </div>
         </header>
 
-        <!-- Main Content Grid -->
         <main class="grid grid-cols-1 lg:grid-cols-4 gap-6 mt-6">
 
-            <!-- Left Column (Main Content Flow) -->
             <div class="lg:col-span-3 space-y-6">
-                <!-- Main Story: Interactive Map -->
                 <section class="newspaper-article">
                     <h2 class="section-headline text-3xl">Real-Time Hyderabad Traffic Flow Map</h2>
                     <p class="text-gray-700 mb-4">Live traffic visualization showing current speed conditions across Hyderabad's major routes. Features real street coordinates, speed measurements, and color-coded traffic flow data from 30+ monitoring points across the city, exactly as captured from live traffic systems.</p>
@@ -115,9 +111,7 @@
                     <a href="#" class="read-more" onclick="openModal('mapModal')">Read the Full Story & Analysis →</a>
                 </section>
 
-                <!-- Graphs and Games Wrapper -->
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <!-- Graphs and Plots -->
                     <section class="newspaper-article">
                         <h2 class="section-headline text-3xl">Numbers Don't Lie: A Decade of Data</h2>
                         <p class="text-gray-700 mb-4">Visualizing the correlation between rainfall intensity and traffic index over the past ten years in Hyderabad.</p>
@@ -128,7 +122,6 @@
                         </div>
                         <a href="Data1.html" class="read-more">Explore All Visualizations →</a>
                     </section>
-                    <!-- Games Section -->
                     <section class="newspaper-article">
                         <h2 class="section-headline text-3xl">The Sunday Comics & Puzzles</h2>
                         <p class="text-gray-700 mb-4">Take a break with our traffic-themed game. Can you navigate the city?</p>
@@ -142,10 +135,9 @@
                     </section>
                 </div>
 
-                <!-- Photo Strip Section -->
                 <section class="newspaper-article">
                     <h2 class="section-headline text-3xl">📸 Monsoon Traffic in Hyderabad</h2>
-                    <p class="text-gray-700 mb-6">Every year, the arrival of the monsoon transforms Hyderabad’s streets into a bustling yet chaotic scene. Heavy rains bring traffic jams, waterlogging, and long commutes, but also reveal the resilience of the city’s people. Below are snapshots that capture the spirit of Hyderabad during the rains.</p>
+                    <p class="text-gray-700 mb-6">Every year, the arrival of the monsoon transforms Hyderabad's streets into a bustling yet chaotic scene. Heavy rains bring traffic jams, waterlogging, and long commutes, but also reveal the resilience of the city's people. Below are snapshots that capture the spirit of Hyderabad during the rains.</p>
                     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
                         <figure class="border-4 border-gray-400 rounded-lg overflow-hidden shadow-md bg-white"><img src="imgmonsoon1.jpg" alt="Flooded road" class="w-full h-64 object-cover"><figcaption class="text-center text-sm text-gray-700 p-2 bg-gray-100">🚧 Waterlogging at Begumpet after a downpour.</figcaption></figure>
                         <figure class="border-4 border-gray-400 rounded-lg overflow-hidden shadow-md bg-white"><img src="imgmonsoon2.jpg" alt="Traffic jam" class="w-full h-64 object-cover"><figcaption class="text-center text-sm text-gray-700 p-2 bg-gray-100">🚦 Rush hour traffic slowed to a crawl on Necklace Road.</figcaption></figure>
@@ -155,11 +147,28 @@
                         <figure class="border-4 border-gray-400 rounded-lg overflow-hidden shadow-md bg-white"><img src="imgmonsoon6.jpg" alt="Street vendors" class="w-full h-64 object-cover"><figcaption class="text-center text-sm text-gray-700 p-2 bg-gray-100">🍲 Street vendors serving hot snacks near Charminar.</figcaption></figure>
                     </div>
                 </section>
+
+                <section class="newspaper-article">
+                    <h2 class="section-headline text-3xl">Choked Drains, Swelling Coffers: The Man-Made Disaster Behind Hyderabad's Floods</h2>
+                    <p class="text-gray-700 mb-4">While the monsoon brings much-needed relief, it also exposes a critical, man-made crisis brewing beneath Hyderabad's streets. The city's historical water management systems are buckling under the pressure of unchecked urbanisation and administrative apathy, turning seasonal rains into annual disasters.</p>
+                    <div class="space-y-4 text-gray-800 mt-6">
+                        <div>
+                            <h4 class="font-bold text-lg text-gray-900 border-l-4 border-red-600 pl-3 mb-2">Hyderabad Rains: 4 Dead, Several Missing Amidst Floods, Power Cuts, and Traffic Chaos</h4>
+                            <p>Relentless rainfall battered Hyderabad for days, flooding key arteries and overwhelming city infrastructure. According to the Telangana Development Planning Society, some areas saw nearly 250 mm of rain within 24 hours. Floodwaters choked the IT corridor and densely populated neighborhoods, leaving commuters stranded and homes inundated</p>
+                        </div>
+                        <div>
+                            <h4 class="font-bold text-lg text-gray-900 border-l-4 border-red-600 pl-3 mb-2">Deluge in Hyderabad: Heavy Rain Floods Major Arteries, Traps Commuters in Traffic Gridlock</h4>
+                            <p>A severe evening downpour left Hyderabad’s arteries inundated and its traffic paralyzed, with areas like KBR Park, Maitrivanam, and colonies across Rangareddy and Medchal-Malkajgiri among the worst hit. Residents and office-goers were forced to brave waist-deep water while wading through submerged roads, as civic authorities scrambled to dig drainage channels and divert floodwater.</p>
+                        </div>
+                        <div>
+                            <h4 class="font-bold text-lg text-gray-900 border-l-4 border-red-600 pl-3 mb-2">Hyderabad Monsoon Crisis: Rescue Efforts</h4>
+                            <p>The proactive real-time traffic and flood management technologies in Hyderabad, such as the Integrated Traffic Management System (ITMS) and Adaptive Traffic Signal Control (ATSC), have been announced and trialed; however, full citywide implementation is still pending due to delays in infrastructure rollout and funding challenges. While some dynamic signaling using real-time Google Maps data is used, large-scale integrated solutions are not yet fully operational across Hyderabad. The ITMS project has faced a multi-year limbo, with incomplete cable laying and sensor installation reported as of recent years. Thus, these systems largely remain planned or partially piloted but are not yet consistently deployed citywide for flood or traffic crisis management.</p>
+                        </div>
+                    </div>
+                </section>
             </div>
 
-            <!-- Right Column (Sidebar) -->
             <aside class="lg:col-span-1 space-y-6">
-                <!-- Zone Traffic Impact Spectrum -->
                 <div class="newspaper-article">
                     <h3 class="section-headline text-xl">Traffic Surge: Zone-wise Analysis</h3>
                     <p class="text-sm text-gray-600 mb-4">Increase in traffic congestion during monsoon (2021–2024). Click a zone for details.</p>
@@ -172,7 +181,6 @@
                     </div>
                 </div>
                 
-                <!-- Monsoon Mirth -->
                 <div class="newspaper-article">
                     <h3 class="section-headline text-xl">Monsoon Mirth</h3>
                     <p class="text-gray-600 italic text-sm mb-2">A lighter take on the city's woes.</p>
@@ -182,7 +190,6 @@
                     </figure>
                 </div>
 
-                <!-- Then & Now: A City's Traffic Evolution -->
                 <div class="newspaper-article">
                     <h3 class="section-headline text-xl">Then & Now: A City's Traffic Evolution</h3>
                      <p class="text-gray-600 italic text-sm mb-3">From quiet roads to bustling arteries, the city's relationship with traffic has dramatically changed.</p>
@@ -194,10 +201,9 @@
                      </ul>
                 </div>
 
-                <!-- From The Archives (Updated) -->
                 <div class="newspaper-article">
                     <h3 class="section-headline text-xl">From The Archives</h3>
-                    <p class="text-gray-600 italic text-sm mb-2">“Reliving past downpours & traffic drama”</p>
+                    <p class="text-gray-600 italic text-sm mb-2">"Reliving past downpours & traffic drama"</p>
                     <div class="overflow-y-auto max-h-48 pr-2">
                         <ul class="space-y-3 list-disc list-inside text-gray-800 text-sm">
                             <li><a href="https://www.thenewsminute.com/telangana/heavy-rains-lash-hyderabad-roads-waterlogged-traffic-disrupted-166417" target="_blank" class="hover:underline">Heavy rains lash Hyderabad roads: waterlogged, traffic disrupted – The News Minute</a></li>
@@ -205,8 +211,54 @@
                             <li><a href="https://timesofindia.indiatimes.com/city/hyderabad/traffic-management-in-hyderabad-during-monsoon/articleshow/110778349.cms" target="_blank" class="hover:underline">Traffic management in Hyderabad during monsoon – Times of India</a></li>
                             <li><a href="https://www.thehindu.com/news/cities/Hyderabad/flooded-flyovers-choked-roads-traffic-police-change-gears-on-monsoon-strategy/article69831927.ece" target="_blank" class="hover:underline">Flooded flyovers, choked roads: Traffic police change gears on monsoon strategy – The Hindu</a></li>
                             <li><a href="https://timesofindia.indiatimes.com/city/hyderabad/nightmare-on-hyderabad-streets-as-city-sees-heaviest-downpour-in-five-years/articleshow/123983667.cms" target="_blank" class="hover:underline">Nightmare on Hyderabad streets as city sees heaviest downpour in five years – Times of India</a></li>
-                            <li><a href="https://www.thenewsminute.com/telangana/who-a-hyderabads-waterlogged-roads-and-traffic-woes-during-monsoon-104331" target="_blank" class="hover:underline">Who? A Hyderabad’s waterlogged roads and traffic woes during monsoon – The News Minute</a></li>
+                            <li><a href="https://www.thenewsminute.com/telangana/who-a-hyderabads-waterlogged-roads-and-traffic-woes-during-monsoon-104331" target="_blank" class="hover:underline">Who? A Hyderabad's waterlogged roads and traffic woes during monsoon – The News Minute</a></li>
                         </ul>
+                    </div>
+                </div>
+
+                <div class="newspaper-article">
+                    <h3 class="section-headline text-xl">Crisis Spotlight: Encroached Nalas</h3>
+                    <p class="text-gray-600 italic text-sm mb-3">"When nature meets poor planning"</p>
+                    <div class="text-sm text-gray-800 space-y-3">
+                        <p>Every monsoon, Hyderabad's nalas and drains turn into bottlenecks. Illegal constructions, mushrooming year after year, shrink the vent ways meant for stormwater.</p>
+                        <div class="bg-red-50 border-l-4 border-red-400 p-3 rounded">
+                            <p class="font-semibold text-red-800">Critical Stats:</p>
+                            <ul class="text-xs text-red-700 mt-1 space-y-1">
+                                <li>• 173 nalas in GHMC limits</li>
+                                <li>• Each one fully/partially encroached</li>
+                                <li>• 28,000 illegal structures blocking flow</li>
+                            </ul>
+                        </div>
+                        <p class="text-xs">With no space left to flow, water swells into buffer zones and seeps into homes, turning natural streams into man-made hazards.</p>
+                    </div>
+                </div>
+
+                <div class="newspaper-article">
+                    <h3 class="section-headline text-xl">Revenue Over Relief</h3>
+                    <p class="text-gray-600 italic text-sm mb-3">"Administrative apathy in action"</p>
+                    <div class="text-sm text-gray-800 space-y-3">
+                        <p>Despite repeated floods, GHMC and HMDA continue to regularise encroachments by collecting penalties, swelling their coffers while problems remain untouched.</p>
+                        <div class="bg-yellow-50 border-l-4 border-yellow-400 p-3 rounded">
+                            <p class="font-semibold text-yellow-800">The Kirloskar Committee Reality:</p>
+                            <ul class="text-xs text-yellow-700 mt-1 space-y-1">
+                                <li>• Recommended widening nalas a decade ago</li>
+                                <li>• ₹15,000 crore needed for implementation</li>
+                                <li>• Proposal quietly shelved due to costs</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="newspaper-article">
+                    <h3 class="section-headline text-xl">Tanks in Trouble</h3>
+                    <p class="text-gray-600 italic text-sm mb-3">"From water harvesting to flood amplification"</p>
+                    <div class="text-sm text-gray-800 space-y-3">
+                        <p>Hyderabad once thrived on its 826 tanks and their catchment basins. Today, those basins are threatened by choked drains and encroached nalas.</p>
+                        <div class="bg-blue-50 border-l-4 border-blue-400 p-3 rounded">
+                            <p class="font-semibold text-blue-800">Historical Context:</p>
+                            <p class="text-xs text-blue-700 mt-1">What was once designed to harvest rainwater now amplifies flood risk, leaving residents to wade through the consequences of poor urban planning.</p>
+                        </div>
+                        <p class="text-xs font-medium text-gray-600 italic">The city's water heritage becomes its monsoon nemesis.</p>
                     </div>
                 </div>
             </aside>
@@ -214,7 +266,6 @@
         </main>
     </div>
 
-    <!-- Modals for Detailed Views -->
     <div id="mapModal" class="modal"><div class="modal-content"><span class="close-button" onclick="closeModal('mapModal')">&times;</span><h2 class="section-headline text-4xl">In-Depth Analysis: Mapping Monsoon Traffic</h2><p>This is where the detailed story about the interactive map would go. We could include more text, images, and specific data points about the most affected areas like Hitech City, Begumpet, and the Old City. We can discuss the methodology behind the data collection and the key takeaways from the visualization.</p></div></div>
     <div id="pyramidModal" class="modal"><div class="modal-content"><span class="close-button" onclick="closeModal('pyramidModal')">&times;</span><h2 class="section-headline text-4xl">Pyramid Statistics</h2><p>Here you can add input fields to let users fill in their own statistics for each level of the pyramid, or display detailed pre-existing data.</p><div class="mt-4 space-y-2"><div><label class="font-bold">Heavy Rainfall:</label> <input type="text" class="border p-1 rounded-md w-full" value="Avg. 150mm during peak monsoon"></div><div><label class="font-bold">Water Logging:</label> <input type="text" class="border p-1 rounded-md w-full" value="Affects 45% of major junctions"></div><div><label class="font-bold">Vehicle Breakdowns:</label> <input type="text" class="border p-1 rounded-md w-full" value="Increases by 200% on rainy days"></div><div><label class="font-bold">Poor Drainage:</label> <input type="text" class="border p-1 rounded-md w-full" value="55% of storm drains are clogged"></div></div></div></div>
     <div id="graphsModal" class="modal"><div class="modal-content"><span class="close-button" onclick="closeModal('graphsModal')">&times;</span><h2 class="section-headline text-4xl">Data Visualizations</h2><p>This space will house a collection of different charts: bar charts for monthly comparisons, box plots to show data distribution, and scatter plots to identify correlations. Each chart would come with a brief explanation of what it represents.</p></div></div>
@@ -240,4 +291,3 @@
     </script>
 </body>
 </html>
-
